# irbis64_client

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.cmd  irbis64_test.c
include/: irbis64_client.h
libs/: irbis64_client.def  irbis64_client.exp  irbis64_client.lib  irbis64_client.lst  makelib.cmd
tests/: CMakeLists.txt  build.cmd  irbis64_client.c  irbis64_client.def
tests/ready/: irbis64_client.exp  irbis64_client.lib
